flatcad/code/src/org/six11/flatcad/flatlang/FlatLangParser.java
// $ANTLR 3.0b6 src/org/six11/flatcad/flatlang/FlatLang.g 2008-03-04 16:45:40

package org.six11.flatcad.flatlang;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class FlatLangParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROG", "FUNCTION_DEF_SIGNATURE", "FUNCTION_CALL", "STATEMENT", "PARAM_LIST", "PARAM", "EXPR", "BLOCK", "REPLACE", "REPLACE_ALL", "SHAPE", "FROM", "N_ADD_EXPR", "N_MINUS_EXPR", "N_MULT_EXPR", "N_DIV_EXPR", "N_MODULO_EXPR", "N_ASSIGN_EXPR", "N_UNARY_EXPR", "N_UNARY_NEG_EXPR", "N_UNARY_POS_EXPR", "N_LT_EXPR", "N_LTEQ_EXPR", "N_GTEQ_EXPR", "N_GT_EXPR", "N_EQ_EXPR", "N_NEQ_EXPR", "N_AND_EXPR", "N_OR_EXPR", "WHILE_STATEMENT", "REPEAT_STATEMENT", "IF_STATEMENT", "IF_ALT", "ELSE_ALT", "LITERAL", "INDEX_EXPR", "LIST_EXPR", "MEMBER_EXPR", "MEMBER_EXPR_DOT", "FOR_EACH_STATEMENT", "ID", "TRUE", "FALSE", "INFINITY", "OBJECT", "SAFE", "NUM", "STR_LITERAL", "INT", "LETTER", "ESC_SEQ", "UNI_ESC", "OCT_ESC", "HEX_DIGIT", "LINE_COMMENT", "WS", "'done'", "'if'", "'else'", "'alt'", "'('", "')'", "'repeat'", "'while'", "'for each'", "':'", "'='", "'or'", "'and'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'.'", "'['", "']'", "'define'", "'replace'", "','", "'replaceAll'", "'from'", "'shape'"
    };
    public static final int N_LTEQ_EXPR=26;
    public static final int N_UNARY_POS_EXPR=24;
    public static final int STATEMENT=7;
    public static final int N_EQ_EXPR=29;
    public static final int N_DIV_EXPR=19;
    public static final int N_GTEQ_EXPR=27;
    public static final int REPEAT_STATEMENT=34;
    public static final int EXPR=10;
    public static final int OCT_ESC=56;
    public static final int FALSE=46;
    public static final int N_ASSIGN_EXPR=21;
    public static final int IF_ALT=36;
    public static final int PROG=4;
    public static final int SHAPE=14;
    public static final int BLOCK=11;
    public static final int LITERAL=38;
    public static final int LIST_EXPR=40;
    public static final int IF_STATEMENT=35;
    public static final int INT=52;
    public static final int INFINITY=47;
    public static final int PARAM=9;
    public static final int ELSE_ALT=37;
    public static final int N_AND_EXPR=31;
    public static final int MEMBER_EXPR=41;
    public static final int INDEX_EXPR=39;
    public static final int HEX_DIGIT=57;
    public static final int STR_LITERAL=51;
    public static final int N_MULT_EXPR=18;
    public static final int N_GT_EXPR=28;
    public static final int WHILE_STATEMENT=33;
    public static final int SAFE=49;
    public static final int ID=44;
    public static final int FROM=15;
    public static final int OBJECT=48;
    public static final int LETTER=53;
    public static final int N_MODULO_EXPR=20;
    public static final int WS=59;
    public static final int PARAM_LIST=8;
    public static final int REPLACE=12;
    public static final int FUNCTION_CALL=6;
    public static final int N_OR_EXPR=32;
    public static final int LINE_COMMENT=58;
    public static final int N_NEQ_EXPR=30;
    public static final int N_UNARY_NEG_EXPR=23;
    public static final int ESC_SEQ=54;
    public static final int UNI_ESC=55;
    public static final int N_LT_EXPR=25;
    public static final int N_MINUS_EXPR=17;
    public static final int REPLACE_ALL=13;
    public static final int EOF=-1;
    public static final int NUM=50;
    public static final int MEMBER_EXPR_DOT=42;
    public static final int N_ADD_EXPR=16;
    public static final int FUNCTION_DEF_SIGNATURE=5;
    public static final int TRUE=45;
    public static final int FOR_EACH_STATEMENT=43;
    public static final int N_UNARY_EXPR=22;

        public FlatLangParser(TokenStream input) {
            super(input);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "src/org/six11/flatcad/flatlang/FlatLang.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start prog
    // src/org/six11/flatcad/flatlang/FlatLang.g:60:1: prog : ( statement )* -> ^( PROG ( statement )* ) ;
    public prog_return prog() throws RecognitionException {
        prog_return retval = new prog_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        statement_return statement1 = null;

        List list_statement=new ArrayList();

        try {
            // src/org/six11/flatcad/flatlang/FlatLang.g:60:8: ( ( statement )* -> ^( PROG ( statement )* ) )
            // src/org/six11/flatcad/flatlang/FlatLang.g:60:8: ( statement )*
            {
            // src/org/six11/flatcad/flatlang/FlatLang.g:60:8: ( statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);
                if ( ((LA1_0>=ID && LA1_0<=STR_LITERAL)||LA1_0==61||LA1_0==64||(LA1_0>=66 && LA1_0<=68)||(LA1_0>=79 && LA1_0<=80)||LA1_0==85||(LA1_0>=87 && LA1_0<=88)||(LA1_0>=90 && LA1_0<=92)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src/org/six11/flatcad/flatlang/FlatLang.g:60:8: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_prog262);
            	    statement1=statement();
            	    _fsp--;

            	    list_statement.add(statement1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // AST REWRITE
            int i_0 = 0;
            retval.tree = root_0;
            root_0 = (CommonTree)adaptor.nil();
            // 60:26: -> ^( PROG ( statement )* )
            {
                // src/org/six11/flatcad/flatlang/FlatLang.g:60:29: ^( PROG ( statement )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(PROG, "PROG"), root_1);

                // src/org/six11/flatcad/flatlang/FlatLang.g:60:36: ( statement )*
                {
                int n_1 = list_statement == null ? 0 : list_statement.size();
                 


                for (int i_1=0; i_1<n_1; i_1++) {
                    adaptor.addChild(root_1, list_statement.get(i_1));

                }
                }

                adaptor.addChild(root_0, root_1);
                }

            }



            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        return retval;
    }
    // $ANTLR end prog

    public static class block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start block
    // src/org/six11/flatcad/flatlang/FlatLang.g:63:1: block : ( nonDefStatement )+ -> ^( BLOCK ( nonDefStatement )+ ) ;
    public block_return block() throws RecognitionException {
        block_return retval = new block_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        nonDefStatement_return nonDefStatement2 = null;

        List list_nonDefStatement=new ArrayList();

        try {
            // src/org/six11/flatcad/flatlang/FlatLang.g:64:9: ( ( nonDefStatement )+ -> ^( BLOCK ( nonDefStatement )+ ) )
            // src/org/six11/flatcad/flatlang/FlatLang.g:64:9: ( nonDefStatement )+
            {
            // src/org/six11/flatcad/flatlang/FlatLang.g:64:9: ( nonDefStatement )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);
                if ( ((LA2_0>=ID && LA2_0<=OBJECT)||(LA2_0>=NUM && LA2_0<=STR_LITERAL)||LA2_0==61||LA2_0==64||(LA2_0>=66 && LA2_0<=68)||(LA2_0>=79 && LA2_0<=80)||LA2_0==85||LA2_0==88||(LA2_0>=90 && LA2_0<=92)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // src/org/six11/flatcad/flatlang/FlatLang.g:64:9: nonDefStatement
            	    {
            	    pushFollow(FOLLOW_nonDefStatement_in_block295);
            	    nonDefStatement2=nonDefStatement();
            	    _fsp--;

            	    list_nonDefStatement.add(nonDefStatement2.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            // AST REWRITE
            int i_0 = 0;
            retval.tree = root_0;
            root_0 = (CommonTree)adaptor.nil();
            // 64:31: -> ^( BLOCK ( nonDefStatement )+ )
            {
                // src/org/six11/flatcad/flatlang/FlatLang.g:64:34: ^( BLOCK ( nonDefStatement )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(BLOCK, "BLOCK"), root_1);

                // src/org/six11/flatcad/flatlang/FlatLang.g:64:42: ( nonDefStatement )+
                {
                int n_1 = list_nonDefStatement == null ? 0 : list_nonDefStatement.size();
                 


                if ( n_1==0 ) throw new RuntimeException("Must have more than one element for (...)+ loops");
                for (int i_1=0; i_1<n_1; i_1++) {
                    adaptor.addChild(root_1, list_nonDefStatement.get(i_1));

                }
                }

                adaptor.addChild(root_0, root_1);
                }

            }



            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        return retval;
    }
    // $ANTLR end block

    public static class statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start statement
    // src/org/six11/flatcad/flatlang/FlatLang.g:67:1: statement : ( n_definition | nonDefStatement );
    public statement_return statement() throws RecognitionException {
        statement_return retval = new statement_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        n_definition_return n_definition3 = null;

        nonDefStatement_return nonDefStatement4 = null;



        try {
            // src/org/six11/flatcad/flatlang/FlatLang.g:68:4: ( n_definition | nonDefStatement )
            int alt3=2;
            int LA3_0 = input.LA(1);
            if ( (LA3_0==SAFE||LA3_0==87) ) {
                alt3=1;
            }
            else if ( ((LA3_0>=ID && LA3_0<=OBJECT)||(LA3_0>=NUM && LA3_0<=STR_LITERAL)||LA3_0==61||LA3_0==64||(LA3_0>=66 && LA3_0<=68)||(LA3_0>=79 && LA3_0<=80)||LA3_0==85||LA3_0==88||(LA3_0>=90 && LA3_0<=92)) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("67:1: statement : ( n_definition | nonDefStatement );", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // src/org/six11/flatcad/flatlang/FlatLang.g:68:4: n_definition
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_n_definition_in_statement324);
                    n_definition3=n_definition();
                    _fsp--;

                    adaptor.addChild(root_0, n_definition3.getTree());

                    }
                    break;
                case 2 :
                    // src/org/six11/flatcad/flatlang/FlatLang.g:69:4: nonDefStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_nonDefStatement_in_statement329);
                    nonDefStatement4=nonDefStatement();
                    _fsp--;

                    adaptor.addChild(root_0, nonDefStatement4.getTree());

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        return retval;
    }
    // $ANTLR end statement

    public static class nonDefStatement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start nonDefStatement
    // src/org/six11/flatcad/flatlang/FlatLang.g:72:1: nonDefStatement : ( replaceStatement | replaceAllStatement | shapeStatement | fromStatement | whileStatement | repeatStatement | ifStatement | forEachStatement | statementExpression -> ^( STATEMENT statementExpression ) );
    public nonDefStatement_return nonDefStatement() throws RecognitionException {
        nonDefStatement_return retval = new nonDefStatement_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        replaceStatement_return replaceStatement5 = null;

        replaceAllStatement_return replaceAllStatement6 = null;

        shapeStatement_return shapeStatement7 = null;

        fromStatement_return fromStatement8 = null;

        whileStatement_return whileStatement9 = null;

        repeatStatement_return repeatStatement10 = null;

        ifStatement_return ifStatement11 = null;

        forEachStatement_return forEachStatement12 = null;

        statementExpression_return statementExpression13 = null;

        List list_statementExpression=new ArrayList();

        try {
            // src/org/six11/flatcad/flatlang/FlatLang.g:73:9: ( replaceStatement | replaceAllStatement | shapeStatement | fromStatement | whileStatement | repeatStatement | ifStatement | forEachStatement | statementExpression -> ^( STATEMENT statementExpression ) )
            int alt4=9;
            switch ( input.LA(1) ) {
            case 88:
                alt4=1;
                break;
            case 90:
                alt4=2;
                break;
            case 92:
                alt4=3;
                break;
            case 91:
                alt4=4;
                break;
            case 67:
                alt4=5;
                break;
            case 66:
                alt4=6;
                break;
            case 61:
                alt4=7;
                break;
            case 68:
                alt4=8;
                break;
            case ID:
            case TRUE:
            case FALSE:
            case INFINITY:
            case OBJECT:
            case NUM:
            case STR_LITERAL:
            case 64:
            case 79:
            case 80:
            case 85:
                alt4=9;
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("72:1: nonDefStatement : ( replaceStatement | replaceAllStatement | shapeStatement | fromStatement | whileStatement | repeatStatement | ifStatement | forEachStatement | statementExpression -> ^( STATEMENT statementExpression ) );", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // src/org/six11/flatcad/flatlang/FlatLang.g:73:9: replaceStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_replaceStatement_in_nonDefStatement345);
                    replaceStatement5=replaceStatement();
                    _fsp--;

                    adaptor.addChild(root_0, replaceStatement5.getTree());

                    }
                    break;
                case 2 :
                    // src/org/six11/flatcad/flatlang/FlatLang.g:74:9: replaceAllStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_replaceAllStatement_in_nonDefStatement355);
                    replaceAllStatement6=replaceAllStatement();
                    _fsp--;

                    adaptor.addChild(root_0, replaceAllStatement6.getTree());

                    }
                    break;
                case 3 :
                    // src/org/six11/flatcad/flatlang/FlatLang.g:75:9: shapeStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_shapeStatement_in_nonDefStatement365);
                    shapeStatement7=shapeStatement();
                    _fsp--;

                    adaptor.addChild(root_0, shapeStatement7.getTree());

                    }
                    break;
                case 4 :
                    // src/org/six11/flatcad/flatlang/FlatLang.g:76:9: fromStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_fromStatement_in_nonDefStatement375);
                    fromStatement8=fromStatement();
                    _fsp--;

                    adaptor.addChild(root_0, fromStatement8.getTree());

                    }
                    break;
                case 5 :
                    // src/org/six11/flatcad/flatlang/FlatLang.g:77:9: whileStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_whileStatement_in_nonDefStatement385);
                    whileStatement9=whileStatement();
                    _fsp--;

                    adaptor.addChild(root_0, whileStatement9.getTree());

                    }
                    break;
                case 6 :
                    // src/org/six11/flatcad/flatlang/FlatLang.g:78:9: repeatStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_repeatStatement_in_nonDefStatement395);
                    repeatStatement10=repeatStatement();
                    _fsp--;

                    adaptor.addChild(root_0, repeatStatement10.getTree());

                    }
                    break;
                case 7 :
                    // src/org/six11/flatcad/flatlang/FlatLang.g:79:9: ifStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_ifStatement_in_nonDefStatement405);
                    ifStatement11=ifStatement();
                    _fsp--;

                    adaptor.addChild(root_0, ifStatement11.getTree());

                    }
                    break;
                case 8 :
                    // src/org/six11/flatcad/flatlang/FlatLang.g:80:7: forEachStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_forEachStatement_in_nonDefStatement413);
                    forEachStatement12=forEachStatement();
                    _fsp--;

                    adaptor.addChild(root_0, forEachStatement12.getTree());

                    }
                    break;
                case 9 :
                    // src/org/six11/flatcad/flatlang/FlatLang.g:81:9: statementExpression
                    {
                    pushFollow(FOLLOW_statementExpression_in_nonDefStatement423);
                    statementExpression13=statementExpression();
                    _fsp--;

                    list_statementExpression.add(statementExpression13.getTree());

                    // AST REWRITE
                    int i_0 = 0;
                    retval.tree = root_0;
                    root_0 = (CommonTree)adaptor.nil();
                    // 81:31: -> ^( STATEMENT statementExpression )
                    {
                        // src/org/six11/flatcad/flatlang/FlatLang.g:81:34: ^( STATEMENT statementExpression )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(STATEMENT, "STATEMENT"), root_1);

                        adaptor.addChild(root_1, list_statementExpression.get(i_0));

                        adaptor.addChild(root_0, root_1);
                        }

                    }



                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        return retval;
    }
    // $ANTLR end nonDefStatement

    public static class ifStatement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start ifStatement
    // src/org/six11/flatcad/flatlang/FlatLang.g:84:1: ifStatement : ifStatementStart ( altStatement )* ( elseStatement )? 'done' -> ^( IF_STATEMENT ifStatementStart ( altStatement )* ( elseStatement )? ) ;
    public ifStatement_return ifStatement() throws RecognitionException {
        ifStatement_return retval = new ifStatement_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal17=null;
        ifStatementStart_return ifStatementStart14 = null;

        altStatement_return altStatement15 = null;

        elseStatement_return elseStatement16 = null;

        List list_altStatement=new ArrayList();
        List list_elseStatement=new ArrayList();
        List list_ifStatementStart=new ArrayList();
        List list_60=new ArrayList();
        CommonTree string_literal17_tree=null;

        try {
            // src/org/six11/flatcad/flatlang/FlatLang.g:85:4: ( ifStatementStart ( altStatement )* ( elseStatement )? 'done' -> ^( IF_STATEMENT ifStatementStart ( altStatement )* ( elseStatement )? ) )
            // src/org/six11/flatcad/flatlang/FlatLang.g:85:4: ifStatementStart ( altStatement )* ( elseStatement )? 'done'
            {
            pushFollow(FOLLOW_ifStatementStart_in_ifStatement447);
            ifStatementStart14=ifStatementStart();
            _fsp--;

            list_ifStatementStart.add(ifStatementStart14.getTree());
            // src/org/six11/flatcad/flatlang/FlatLang.g:86:3: ( altStatement )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);
                if ( (LA5_0==63) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // src/org/six11/flatcad/flatlang/FlatLang.g:86:3: altStatement
            	    {
            	    pushFollow(FOLLOW_altStatement_in_ifStatement452);
            	    altStatement15=altStatement();
            	    _fsp--;

            	    list_altStatement.add(altStatement15.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            // src/org/six11/flatcad/flatlang/FlatLang.g:87:3: ( elseStatement )?
            int alt6=2;
            int LA6_0 = input.LA(1);
            if ( (LA6_0==62) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // src/org/six11/flatcad/flatlang/FlatLang.g:87:3: elseStatement
                    {
                    pushFollow(FOLLOW_elseStatement_in_ifStatement457);
                    elseStatement16=elseStatement();
                    _fsp--;

                    list_elseStatement.add(elseStatement16.getTree());

                    }
                    break;

            }

            string_literal17=(Token)input.LT(1);
            match(input,60,FOLLOW_60_in_ifStatement462); 
            list_60.add(string_literal17);


            // AST REWRITE
            int i_0 = 0;
            retval.tree = root_0;
            root_0 = (CommonTree)adaptor.nil();
            // 89:3: -> ^( IF_STATEMENT ifStatementStart ( altStatement )* ( elseStatement )? )
            {
                // src/org/six11/flatcad/flatlang/FlatLang.g:89:6: ^( IF_STATEMENT ifStatementStart ( altStatement )* ( elseStatement )? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(IF_STATEMENT, "IF_STATEMENT"), root_1);

                adaptor.addChild(root_1, list_ifStatementStart.get(i_0));
                // src/org/six11/flatcad/flatlang/FlatLang.g:89:38: ( altStatement )*
                {
                int n_1 = list_altStatement == null ? 0 : list_altStatement.size();
                 


                for (int i_1=0; i_1<n_1; i_1++) {
                    adaptor.addChild(root_1, list_altStatement.get(i_1));

                }
                }
                // src/org/six11/flatcad/flatlang/FlatLang.g:89:52: ( elseStatement )?
                {
                int n_1 = list_elseStatement == null ? 0 : list_elseStatement.size();
                 

